--- a/index.html
+++ b/index.html
@@ -303,12 +303,11 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+                <h1>Tecnologias de la Informacion.</h1>
                 <p>
-                  Some representative placeholder content for the second slide
-                  of the carousel.
+                  Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
                 </p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#">Mas Informacion ...</a></p>
               </div>
             </div>
           </div>
