--- a/index.html
+++ b/index.html
@@ -328,13 +328,12 @@
             </svg>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>One more for good measure.</h1>
+                <h1>Ingenieria Industrial.</h1>
                 <p>
-                  Some representative placeholder content for the third slide of
-                  this carousel.
+                  Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+                  <a class="btn btn-lg btn-primary" href="#">Mas Informacion ...</a>
                 </p>
               </div>
             </div>
