titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               width="140"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <title>Placeholder</title>
+              <title>FISEI</title>
               <rect
                 width="100%"
                 height="100%"
