--- a/index.html
+++ b/index.html
@@ -381,40 +381,12 @@
                 fill="var(--bs-secondary-color)"
               ></rect>
             </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">Administracion de Redes</h2>
             <p>
-              Some representative placeholder content for the three columns of
-              text below the carousel. This is the first column.
+              Departamento de gestion de redes
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
-            </p>
-          </div>
-          <!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <svg
-              aria-label="Placeholder"
-              class="bd-placeholder-img rounded-circle"
-              height="140"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="140"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              ></rect>
-            </svg>
-            <h2 class="fw-normal">Heading</h2>
-            <p>
-              Another exciting bit of representative placeholder content. This
-              time, we've moved on to the second column.
-            </p>
-            <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -435,13 +407,38 @@
                 fill="var(--bs-secondary-color)"
               ></rect>
             </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">CTT- Talleres</h2>
             <p>
-              And lastly this, the third column of representative placeholder
-              content.
+              Departamento que permite el desarrollo de talleres.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <svg
+              aria-label="Placeholder"
+              class="bd-placeholder-img rounded-circle"
+              height="140"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="140"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">Biblioteca</h2>
+            <p>
+              Departamento que permite el prestamo de libros.
+            </p>
+            <p>
+              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
