--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Mas Informacion ...</a>
+                  <a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/mision-vision-software">Mas Informacion ...</a>
                 </p>
               </div>
             </div>
@@ -307,7 +307,7 @@
                 <p>
                   Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
                 </p>
-                <p><a class="btn btn-lg btn-primary" href="#">Mas Informacion ...</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/tecnologias-de-la-informacion">Mas Informacion ...</a></p>
               </div>
             </div>
           </div>
@@ -333,7 +333,7 @@
                   Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Mas Informacion ...</a>
+                  <a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/ingenieria-industrial">Mas Informacion ...</a>
                 </p>
               </div>
             </div>
@@ -386,7 +386,7 @@
               Departamento de gestion de redes
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
+              <a class="btn btn-secondary" href="https://youtu.be/FtutLA63Cp8?si=IFU8Bpm8610B0wmI">Mas Informacion ... &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -412,7 +412,7 @@
               Departamento que permite el desarrollo de talleres.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
+              <a class="btn btn-secondary" href="https://ctt-talleresfisei.uta.edu.ec/">Mas Informacion ... &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -438,7 +438,7 @@
               Departamento que permite el prestamo de libros.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">Mas Informacion ... &raquo;</a>
+              <a class="btn btn-secondary" href="https://fisei.uta.edu.ec/v4.0/index.php/bibliotecas">Mas Informacion ... &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
