--- a/index.html
+++ b/index.html
@@ -449,12 +449,10 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">
-              First featurette heading.
-              <span class="text-body-secondary">It’ll blow your mind.</span>
+              CLUBES DEPORTIVOS - UTA 2025.
             </h2>
             <p class="lead">
-              Some great placeholder content for the first featurette here.
-              Imagine some exciting prose here.
+              Las inscripciones estarán abiertas hasta el 28 de abril. Para unirte necesitas presentar: ficha estudiantil, certificación de estar legalmente matriculado, oficio dirigido a la Directora del CCF solicitando integrar el club, copia de la cédula y una carpeta con el color correspondiente al club.
             </p>
           </div>
           <div class="col-md-5">
@@ -483,13 +481,10 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1">
-              Oh yeah, it’s that good.
-              <span class="text-body-secondary">See for yourself.</span>
+              CONVOCATORIA AYUDANTES DE INVESTIGACIÓN JULIO 2025.
             </h2>
             <p class="lead">
-              Another featurette? Of course. More placeholder content here to
-              give you an idea of how this layout would work with some actual
-              real-world content in place.
+              Esta sección desempeña un papel crucial como espacio informativo destinado a comunicar oportunidades de participación y colaboración académica en el ámbito educativo.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
