--- a/index.html
+++ b/index.html
@@ -449,10 +449,12 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">
-              CLUBES DEPORTIVOS - UTA 2025.
+              First featurette heading.
+              <span class="text-body-secondary">It’ll blow your mind.</span>
             </h2>
             <p class="lead">
-              Las inscripciones estarán abiertas hasta el 28 de abril. Para unirte necesitas presentar: ficha estudiantil, certificación de estar legalmente matriculado, oficio dirigido a la Directora del CCF solicitando integrar el club, copia de la cédula y una carpeta con el color correspondiente al club.
+              Some great placeholder content for the first featurette here.
+              Imagine some exciting prose here.
             </p>
           </div>
           <div class="col-md-5">
@@ -481,10 +483,13 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1">
-              CONVOCATORIA AYUDANTES DE INVESTIGACIÓN JULIO 2025.
+              Oh yeah, it’s that good.
+              <span class="text-body-secondary">See for yourself.</span>
             </h2>
             <p class="lead">
-              Esta sección desempeña un papel crucial como espacio informativo destinado a comunicar oportunidades de participación y colaboración académica en el ámbito educativo.
+              Another featurette? Of course. More placeholder content here to
+              give you an idea of how this layout would work with some actual
+              real-world content in place.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -553,7 +558,7 @@
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          &copy; 2017–2025 Company, Inc. &middot;
+          &copy; 2025 FISEI-UTA, Edu. &middot;
           <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
         </p>
       </footer>
