--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Tecnologias de la Informacion.</h1>
+                <h1>Telecomunicaciones.</h1>
                 <p>
                   Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
                 </p>
