Cambiar TI por Robotica

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Tecnologias de la Informacion.</h1>
+                <h1>Robotica.</h1>
                 <p>
-                  Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país.
+                  Misión: Formar profesionales líderes competentes, con visión humanista y pensamiento crítico, a través de la Docencia, la Investigación y la Vinculación, que apliquen, promuevan y difundan el conocimiento respondiendo a las necesidades del país..
                 </p>
                 <p><a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/tecnologias-de-la-informacion">Mas Informacion ...</a></p>
               </div>
