--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+              <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Nosotros</a>
               </li>
