--- a/nosotros.html
+++ b/nosotros.html
@@ -1,13 +1,14 @@
 <html>
-  <head>
-    <tittle>
-      Nosotros
-    </tittle>
-    <body>
-      <h1>NOSOTROS</h1>
-      <P>
-        Aqui va un parrafo
-      </P>
-    </body>
-  </head>
+<head>
+  <title>NOSOTROS</title>
+</head>
+<body>
+<h1>NOSOTROS</h1>
+<hr>
+<h2>VISION</h2>
+<p>Aqui va la informacion de vision</p>
+<hr>
+<h2>MISION</h2>
+<p>Aqui va la informacion de Misión</p>
+</body>
 </html>
